Application/cert-manager/ingresstest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
  labels:
    app: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak  
    spec:
      containers:
      - image: quay.io/keycloak/keycloak:14.0.0
        imagePullPolicy: Always
        name: keycloak
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak-svc
  name: keycloak-svc
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8080
  selector:
    app: keycloak
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: keycloak-ingress
spec:
  rules:
  - host: keycloak.masteraks.rbkl.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: keycloak-svc
            port:
              number: 443
  tls:
  - secretName: keycloak-masteraks-rbkl-io
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: artifactory-ingress
  namespace: artifactory
spec:
  rules:
  - host: artifactory.masteraks.rbkl.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: artifactory
            port:
              number: 8082
  tls:
  - secretName: artifactory-masteraks-rbkl-io
